@@ -20,6 +20,11 @@ Changelog
   that HDU's header entirely (even if it was valid.)
   (Backported from 3.2.1)
 
+- Fixed an issue where the size of the heap was sometimes not computed
+  properly when writing an existing table containing variable-length array
+  columns to a new FITS file.  This could result in corruption in the new FITS
+  file. (Backported from 3.2.1)
+
 
 3.0.13 (unreleased)
 -------------------
@@ -30,6 +35,11 @@ Changelog
 - Fixed an issue where validating an HDU's checksums removed the checksum from
   that HDU's header entirely (even if it was valid.)
   (Backported from 3.2.1)
+
+- Fixed an issue where the size of the heap was sometimes not computed
+  properly when writing an existing table containing variable-length array
+  columns to a new FITS file.  This could result in corruption in the new FITS
+  file. (Backported from 3.2.1)
 
 
 3.2 (2013-11-26)
